--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -418,7 +418,7 @@
             console.log('表單資料已保存');
             
             // 跳轉到7-11門市選擇API（同分頁跳轉）
-            const cvsUrl = 'https://emap.presco.com.tw/c2cemap.ashx?eshopid=870&&servicetype=1&url=http://localhost:5000/cvs_callback';
+            const cvsUrl = 'https://emap.presco.com.tw/c2cemap.ashx?eshopid=870&&servicetype=1&url=https://iqosttw.com/cvs_callback';
             console.log('準備跳轉到門市選擇頁面:', cvsUrl);
             
             // 直接跳轉到7-11門市選擇頁面
