--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -487,7 +487,7 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:5000/api';
+        const API_BASE = '/api';
         let currentTab = 'categories';
         let categories = [];
         let products = [];
