--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -144,7 +144,7 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:5000/api';
+        const API_BASE = '/api';
         
         document.getElementById('loginForm').addEventListener('submit', async function(e) {
             e.preventDefault();
