--- a/templates/base.html
+++ b/templates/base.html
@@ -185,7 +185,7 @@
     </footer>
 
     <script>
-        const API_BASE = 'http://localhost:5000/api';
+        const API_BASE = '/api';
         
         // 載入分類導航
         async function loadCategoryNav() {
