--- a/templates/category.html
+++ b/templates/category.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ category_name }} - 購物網站{% endblock %}
+{% block title %}{{ category_name }}IQOS TW{% endblock %}
 
 {% block extra_css %}
 <style>
