--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}首頁 - 購物網站{% endblock %}
+{% block title %}IQOS TW - 首頁{% endblock %}
 
 {% block extra_css %}
 <style>
