--- a/templates/order_success.html
+++ b/templates/order_success.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}訂單成功 - 購物網站{% endblock %}
+{% block title %}IQOS - 訂單成功{% endblock %}
 
 {% block extra_css %}
 <style>
