--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>管理員登入 - 購物網站後台</title>
+    <title>管理員登入 - IQOS後台</title>
     <style>
         * {
             margin: 0;
